Fixed long text not wrapping inside content. Added load tweets on page load.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -73,12 +73,14 @@ article:hover .handle{
   margin: auto;
   border-bottom: 3px solid gray;
   width: 100%;
-  padding: 20px;
+  padding-bottom: 5px;
+  padding-top: 30px;
   text-align: left;
 }
 
 .text {
   padding: 2px;
+  overflow-wrap: break-word;
 }
 
 .tweet-footer {
@@ -99,6 +101,5 @@ article:hover .handle{
   display: none;
   color: red;
   border: solid 3px red;
-  padding: 10px
-  
+  padding: 10px;
 }
